# PFD_Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  EXPL_AGENT_INTEGRATION.md  README.md  VASP_README.md  agent_template.py  docker-compose.server.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pkg-branch.yml
agents/: __init__.py  google_agent.py
agents/MatCreator/: __init__.py  agent.py  callbacks.py  config.py  constants.py  execution_agent.py  input.json  skill.py  tools.py  util_tools.py  workspace.py
agents/MatCreator/abacus_agent/: agent.py
agents/MatCreator/agents/: graph_logger.py  subagent.yaml
agents/MatCreator/agents/execution_agent/: agent.py  step_executor.py  step_executor_runner.py
agents/MatCreator/agents/orchestrator/: agent.py
agents/MatCreator/agents/tester_agent/: agent.py
agents/MatCreator/agents/thinking_agent/: agent.py  history_tools.py  intent.py  memory.py  planning.py  session_summary.py  summarize.py
agents/MatCreator/database_agent/: agent.py
agents/MatCreator/database_agent/sql_agent/: agent.py
agents/MatCreator/dpa_agent/: agent.py
agents/MatCreator/guides/: materials_design.md
agents/MatCreator/knowledge/: MEMORY.md  __init__.py  extractor.py  glossary.md  graph_store.py  kdg_memory.py  kg_state.py  migrate.py  query.py  schema.py  synthesizer.py
agents/MatCreator/knowledge/skills/: pfd.md  (+7 more)
agents/MatCreator/mattergen_agent/: agent.py
agents/MatCreator/pfd_agent/: agent.py
agents/MatCreator/plot_agent/: agent.py
agents/MatCreator/prompts/: __init__.py  subagents.py
agents/MatCreator/skills/: default.md
agents/MatCreator/structure_agent/: agent.py
agents/MatCreator/sub_agents/: __init__.py
agents/MatCreator/summarize_agent/: __init__.py  agent.py
agents/MatCreator/thinking_agent/: __init__.py  agent.py  memory.py  skill.py  trajectory.py  workspace_tools.py
agents/MatCreator/tools/: remoteagent_tool.py  workspace_tools.py
agents/MatCreator/vasp_agent/: agent.py
agents/pfd_agent/: agent.py  callback.py  main.py  prompt.py
agents/pfd_agent/database_agent/: __init__.py  agent.py  prompt.py
agents/pfd_agent/db_agent/: agent.py  test_agent.py
agents/pfd_agent/expl_agent/: agent.py  prompt.py
agents/pfd_agent/ft_agent/: agent.py  prompt.py
agents/pfd_agent/stru_agent/: agent.py  prompt.py
agents/pfd_agent/utils/: constant.py  llm_config.py
data/: know_do_graph.db
deploy/: nginx.server.conf  server-mode.md
docs/: deployment.md  getting-started.md  index.md  knowledge_graph.md  overview.md  requirements.txt
docs/deployment/: personal.md  server.md
docs/knowledge/: index.md  migration.md
examples/pfd-distillation/: README.md
examples/pfd-finetune/: README.md
examples/resubmit-distillation/: README.md
examples/simple-finetune/: README.md
script/: run_benchmark.sh  run_matcreator_bench.py  run_question_answer.py  start_agent.py  start_matcreator.sh  start_mcp_servers.py  visualize_knowledge_graph.py  visualize_skill_graph.py
server/database_server/: mcp-config.json  metadata.json  server.py  test_database_agent.py  test_server.py
src/: websocket-server.py
src/matcreator/: __init__.py  agent.py  cli.py  config.py  constants.py  guide.py  ports.py  skill.py  workspace.py
src/matcreator/agents/: cancellation.py  graph_logger.py
src/matcreator/knowledge/: extractor.py  kdg_memory.py  kg_state.py  migrate.py  query.py  review.py
src/matcreator/memory/: __init__.py  integration.py  workflow_memory_service.py
src/matcreator/modules/: train.py
src/matcreator/scripts/: start_agent.py
src/matcreator/tools/: mcp_tools.py  skill_tools.py  workspace_tools.py
src/matcreator/utils/: utils.py
src/pfd_agent/: agent.py  prompt.py
src/pfd_agent/expl_agent/: __init__.py  agent.py  prompt.py
src/pfd_agent/ft_agent/: agent.py  prompt.py
src/pfd_agent/utils/: ase2xyz.py  common.py  llm_config.py
src/pfd_agent_tool/: constants.py  env.py  init_mcp.py  main.py
src/ui/: package-lock.json  vite.config.ts
tests/: conftest.py  test_kdg_auto_review.py  test_kdg_explicit_migration.py  test_kdg_extractor.py  test_kdg_memory.py  test_kdg_review_pipeline.py  test_matcreator_agent.py  test_matcreator_cli_graph.py  test_matcreator_constants.py  test_mcp_ports.py  test_ports_config.py  test_skill_creation_guide.py  test_skill_tools.py  test_start_matcreator_ports.py  test_structure_builder.py  test_web_ports.py
tools/abacus/: README.md  pyproject.toml  server.py
tools/database/: README.md  server.py
tools/database/database/: __init__.py  database.py
tools/dpa/: README.md  pyproject.toml  server.py
tools/dpa/src/dpa_tool/: ase_md.py  train.py
tools/dpa/tools/: ase_md.py  utils.py
tools/mattergen/: README.md  mcp-config.json  pyproject.toml  server.py
tools/mattergen/src/mattergen_tool/: common.py  submission.py  utils.py
tools/quest/: server.py
tools/vasp/: config.yaml  mcp-config.json  pyproject.toml  server.py
tools/vasp/cif_dir/: frame_0001.cif  frame_0002.cif  frame_0003.cif
tools/vasp/src/vasp_tools/: calculation.py  common.py  utils.py
web/: main.py  streamlit_app.py  users_db.py
web/vite-frontend/: index.html  package-lock.json  package.json  vite.config.js
web/vite-frontend/src/: main.js  style.css
(+191 files in other folders)
